--- a/frontend/flyhigh/package.json
+++ b/frontend/flyhigh/package.json
@@ -12,7 +12,8 @@
     "core-js": "^3.8.3",
     "tailwindcss": "^3.4.17",
     "vue": "^3.2.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
